# rusty-tracer

./: Cargo.toml  Procfile  readme.md
src/: color.rs  light.rs  main.rs  material.rs  plane.rs  point.rs  ray.rs  scene.rs  sphere.rs  texture.rs  vector3.rs
