[package]
name = "rust-tracer"
version = "0.1.0"
authors = ["ngmysamuel <e0148675@u.nus.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
base64 = "0.12.3"